fixed map breaking on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,6 @@
 #mapid {
-  min-height: 420px;
-  min-width: 420px;
+  width: 100%;
+  padding-top: 100%; /* 1:1 Aspect Ratio */
 }
 .list-header {
   font-weight: 600;
